<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filaPlato"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:id="@+id/contenedorItem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imagenItem"
                            android:layout_width="wrap_content"
                            android:layout_height="210dp"
                            android:contentDescription="@string/app_name"
                            card_view:srcCompat="@drawable/asado" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp">

                                <TextView
                                    android:id="@+id/nombreItem"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/menu_opcion1" />

                                <TextView
                                    android:id="@+id/precioItem"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:text="@string/menu_opcion2" />
                        </LinearLayout>

                </LinearLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>